0.03
 - Add query for alias.

0.02 2023-10-29T18:36:22+01:00
 - Add 'deprecated' parameter to handle deprecated values in query.
 - Fix repository link in doc.

0.01 2023-10-27T17:21:39+02:00
 - First version.